--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -8,7 +8,7 @@
     "main": "worker/index.ts",
     "compatibility_date": "2025-04-05",
     "assets": {
-        "not_found_handling": "single-page-application"
+        "name": "cokenavihive"
     },
     "observability": {
         "enabled": true
